# beauty-routine-advisor

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
app/: .env.example  app.py  check_kb.py  config.py  init_kb.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
app/embeddings_db/: chroma.sqlite3  index.faiss  index.pkl
app/knowledge_base/: README.md
app/knowledge_base/skincare_kb/01_nutrition_and_diets/: 03_hydration_and_water_intake.md
app/knowledge_base/skincare_kb/01_nutrition_and_diets/02_nutrition_for_skin/: 01_skin_beneficial_foods.md  03_vitamins_and_beauty_supplements.md
app/knowledge_base/skincare_kb/01_nutrition_and_diets/04_special_diets/: 01_anti_aging_diet.md
app/knowledge_base/skincare_kb/01_Питание_и_диеты/: 01_Основы_здорового_питания.md  03_Питьевой_режим_и_гидратация.md
app/knowledge_base/skincare_kb/01_Питание_и_диеты/02_Питание_для_кожи/: 01_Продукты_полезные_для_кожи.md  02_Продукты_вредные_для_кожи.md
app/knowledge_base/skincare_kb/01_Питание_и_диеты/04_Специальные_диеты/: 02_Диета_при_акне.md
app/knowledge_base/skincare_kb/02_cosmetics_and_ingredients/01_cosmetic_product_types/: 02_toning.md
app/knowledge_base/skincare_kb/02_cosmetics_and_ingredients/02_active_ingredients_encyclopedia/: 02_vitamin_c.md  03_aha_bha_acids.md  04_copper_peptides.md  05_niacinamide.md  06_hyaluronic_acid.md
app/knowledge_base/skincare_kb/02_Косметика_и_ингредиенты/: 03_Чтение_этикеток_INCI.md
app/knowledge_base/skincare_kb/02_Косметика_и_ингредиенты/01_Типы_косметических_средств/: 01_Очищение.md  03_Увлажнение.md  04_Защита_SPF.md
app/knowledge_base/skincare_kb/02_Косметика_и_ингредиенты/02_Активные_ингредиенты_энциклопедия/: 01_Ретинол_и_его_производные.md  04_Нейромедиаторные_пептиды.md
app/knowledge_base/skincare_kb/03_skincare_by_type_and_concern/01_skin_types/: 01_dry_skin.md  02_oily_skin.md  03_combination_skin.md
app/knowledge_base/skincare_kb/03_skincare_by_type_and_concern/02_skin_concerns/: 01_acne_and_post_acne.md  02_pigmentation.md  03_couperose_and_rosacea.md  (+2 more)
app/knowledge_base/skincare_kb/04_hair_care/: 01_hair_and_scalp_types.md  04_hair_cleansing_and_care.md
app/knowledge_base/skincare_kb/04_Уход_за_волосами/: 01_Типы_волос_и_кожи_головы.md
app/knowledge_base/skincare_kb/05_body_care/: 01_body_cleansing_and_exfoliation.md  02_body_moisturizing_and_nourishment.md  03_body_skin_concerns.md
app/knowledge_base/skincare_kb/06_procedures_and_techniques/: 01_daily_skincare_rituals.md  02_massage_and_gua_sha.md  03_masks_and_patches.md  04_salon_vs_home_care.md  05_sos_skin_detox.md  06_spring_skin_prep.md
app/knowledge_base/skincare_kb/07_health_and_lifestyle/: 01_sleep_and_beauty.md  02_stress_and_skin_impact.md  03_exercise_and_circulation.md
app/knowledge_base/База_Знаний_Уход/04_Уход_за_волосами/: 02_Ирландские_локоны.md
app/services/: __init__.py  llm_service.py  rag_service.py
app/services/providers/: __init__.py  base.py  gigachat.py  lm_studio.py  openrouter.py
app/static/css/: style.css
app/static/js/: chat.js
app/templates/: index.html
app/tests/: test_api.py  test_config.py  test_init_kb.py  test_rag_service.py
app/utils/: __init__.py  logger.py
backend/: rag_system.py
(+18 files in other folders)
